[task1] fix date selector styles

--- a/task1.html
+++ b/task1.html
@@ -207,6 +207,7 @@
     form.profile-form input[type=text],
     form.profile-form input[type=email],
     form.profile-form input[type=password],
+    form.profile-form input[type=date],
     form.profile-form select {
       width: 100%;
       padding: 0.5rem 0.7rem;
@@ -220,6 +221,7 @@
     form.profile-form input[type=text]:focus,
     form.profile-form input[type=email]:focus,
     form.profile-form input[type=password]:focus,
+    form.profile-form input[type=date]:focus,
     form.profile-form select:focus {
       border-color: #4a90e2;
       outline: none;
