--- a/task3.html
+++ b/task3.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>2-колоночный резиновый сайт</title>
+  <title>2-колоночный резиновый сайт (Flexbox версия)</title>
   <meta name="description"
-        content="Типовой 2-колоночный резиновый сайт с шапкой, меню, основным контентом и боковой панелью"/>
+        content="Типовой 2-колоночный резиновый сайт с шапкой, меню, основным контентом и боковой панелью, построенный на Flexbox"/>
   <style>
     /* Сброс и базовые стили */
     * {
@@ -24,36 +24,22 @@
 
     body {
       min-height: 100vh;
-      display: grid;
-      grid-template-rows: 150px auto 1fr 100px;
-      grid-template-columns: 100%;
+      display: flex;
+      flex-direction: column;
     }
 
-    header {
-      grid-row: 1 / 2;
-    }
-
-    nav {
-      grid-row: 2 / 3;
-    }
-
-    .container {
-      grid-row: 3 / 4;
-    }
-
-    footer {
-      grid-row: 4 / 5;
-    }
-
+    /* Шапка */
     header {
       height: 150px;
       width: 100%;
       background: linear-gradient(90deg, #4a90e2 0%, #357ABD 100%);
       color: #fff;
-      display: block;
       padding: 1rem 2rem;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
       position: relative;
+      flex-shrink: 0; /* не сжимать */
+      display: flex;
+      align-items: center;
     }
 
     header .logo {
@@ -75,13 +61,14 @@
       margin: 0;
     }
 
-    /* Меню: сверху под хедером, 100% ширины */
+    /* Меню */
     nav {
       width: 100%;
       background: #ffffff;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
       padding: 0.5rem 2rem;
       font-weight: 600;
+      flex-shrink: 0;
     }
 
     nav ul {
@@ -108,31 +95,30 @@
       outline: none;
     }
 
+    /* Основной контейнер - flexbox макет */
     .container {
+      overflow: auto;
+      display: flex;
       max-width: 1200px;
       margin: 1rem auto 2rem;
       padding: 0 1rem;
-      font-size: 0;
+      gap: 20px; /* Отступ между колонками */
+      flex-grow: 1; /* Чтобы контейнер занимал доступное место */
+      min-height: 400px;
     }
 
     main.content {
-      display: inline-block;
-      vertical-align: top;
-      min-height: 400px;
-      width: calc(100% - 220px);
+      flex: 1 1 auto; /* Гибкий рост, базовая ширина auto */
       background: white;
       padding: 1.5rem 2rem;
       box-shadow: 0 0 8px rgb(0 0 0 / 0.05);
-      font-size: 1rem; /* восстанавливаем */
+      font-size: 1rem;
       border-radius: 4px;
+      min-height: 400px;
     }
 
     aside.info {
-      display: inline-block;
-      vertical-align: top;
-      width: 200px;
-      min-height: 300px;
-      margin-left: 20px;
+      flex: 0 0 200px; /* фиксированная ширина 200px */
       background: #eef4fb;
       padding: 1rem;
       border-radius: 4px;
@@ -140,8 +126,9 @@
       color: #555;
     }
 
+    /* Футер */
     footer {
-      height: 100px;
+      height: 50px;
       width: 100%;
       background: #357ABD;
       color: white;
@@ -151,6 +138,7 @@
       font-size: 0.9rem;
       box-shadow: inset 0 1px 0 rgba(255 255 255 / 0.2);
       user-select: none;
+      flex-shrink: 0;
     }
 
     input,
@@ -167,7 +155,6 @@
       outline-offset: 2px;
       box-sizing: border-box;
       transition: border-color 0.3s ease, box-shadow 0.3s ease;
-      /* отключаем дефолтное внутреннее тени и обводки */
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
@@ -248,18 +235,18 @@
 
     /* Адаптивность */
     @media (max-width: 768px) {
-      /* Убираем боковую колонку, контент на всю ширину */
-      main.content,
-      aside.info {
-        display: block;
-        width: 100% !important;
-        margin-left: 0;
-        margin-top: 2rem;
-        min-height: auto;
+      .container {
+        flex-direction: column;
+        margin: 1rem;
+        padding: 0;
       }
 
-      .container {
-        padding: 0 1rem;
+      main.content,
+      aside.info {
+        flex: none !important;
+        width: 100% !important;
+        min-height: auto;
+        margin: 0 0 2rem 0;
       }
     }
 
@@ -268,6 +255,7 @@
       header, nav, aside, footer {
         display: none !important;
       }
+
       .container {
         display: block !important;
         margin: 0 !important;
@@ -275,6 +263,7 @@
         width: 100% !important;
         max-width: none !important;
       }
+
       main.content {
         display: block !important;
         width: 100% !important;
@@ -285,6 +274,7 @@
         color: #000 !important;
         min-height: auto !important;
       }
+
       /* Фон всей страницы */
       body {
         background: #fff !important;
@@ -363,8 +353,7 @@
   © 2025 Company Name. Все права защищены Сашей Ушанковым.
 </footer>
 
-</body>
-<script>
+</body><script>
   // 1. Отметка времени начала выполнения скрипта (можно считать началом загрузки,
   // хотя более точное время дает performance.timing.navigationStart)
   const scriptStartTime = Date.now();
